// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple.md - markdown-verify: simple.md 1`] = `
[alpha]: http://example.com
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[alpha]: http://example.com

`;

exports[`space.md - markdown-verify: space.md 1`] = `
[alpha]: <http://example.com 123> "title"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[alpha]: <http://example.com 123> "title"

`;

exports[`title.md - markdown-verify: title.md 1`] = `
[alpha]: http://example.com "title"
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[alpha]: http://example.com "title"

`;
